--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "prepare": "husky install",
-    "commit": "cz"
+    "commit": "cz",
+    "prettier": "prettier --write ."
   },
   "dependencies": {
     "axios": "^1.2.0-alpha.1",
