--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "dayjs": "^1.11.8",
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.3",
+    "underscore": "^1.13.6",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.5",
     "@commitlint/config-conventional": "^17.6.5",
+    "@types/underscore": "^1.11.5",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
