--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prettier": "prettier --write ."
   },
   "dependencies": {
+    "@vueuse/core": "^10.1.2",
     "axios": "^1.2.0-alpha.1",
     "core-js": "^3.8.3",
     "dayjs": "^1.11.8",
