--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "dayjs": "^1.11.8",
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.3",
+    "postcss-px-to-viewport": "^1.1.1",
     "underscore": "^1.13.6",
+    "vant": "^4.5.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
@@ -42,7 +44,8 @@
     "less": "^4.0.0",
     "less-loader": "^8.0.0",
     "prettier": "^2.8.8",
-    "typescript": "~4.5.5"
+    "typescript": "~4.5.5",
+    "unplugin-vue-components": "^0.25.1"
   },
   "config": {
     "commitizen": {
