--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.1.2",
+    "ant-design-vue": "^3.2.20",
     "axios": "^1.2.0-alpha.1",
+    "babel-plugin-import": "^1.13.6",
     "core-js": "^3.8.3",
     "dayjs": "^1.11.8",
     "normalize.css": "^8.0.1",
