--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "mini-app",
+  "name": "electron-vue-template",
   "version": "0.1.0",
+  "main": "electron/main.ts",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve | electron .",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "prepare": "husky install",
@@ -15,6 +16,7 @@
     "axios": "^1.2.0-alpha.1",
     "core-js": "^3.8.3",
     "dayjs": "^1.11.8",
+    "electron": "^25.2.0",
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.3",
     "underscore": "^1.13.6",
