--- a/package.json
+++ b/package.json
@@ -2,10 +2,73 @@
   "name": "electron-vue-template",
   "version": "0.1.0",
   "main": "electron/main.ts",
+  "author": {
+    "name": "korealu",
+    "email": "korealu@foxmail.com"
+  },
+  "description": "electron-打包",
+  "build": {
+    "appId": "lsl.first.app",
+    "productName": "ElectronApp",
+    "copyright": "Copyright © 2023 lsl",
+    "directories": {
+      "output": "dist_electron"
+    },
+    "win": {
+      "icon": "./build/electron-icon/icon.ico",
+      "target": [
+        {
+          "target": "nsis",
+          "arch": [
+            "x64"
+          ]
+        }
+      ]
+    },
+    "dmg": {
+      "contents": [
+        {
+          "x": 410,
+          "y": 150,
+          "type": "link",
+          "path": "/Applications"
+        },
+        {
+          "x": 130,
+          "y": 150,
+          "type": "file"
+        }
+      ]
+    },
+    "linux": {
+      "icon": "./build/electron-icon/icon.png",
+      "target": "AppImage"
+    },
+    "mac": {
+      "icon": "./build/electron-icon/icon.icns"
+    },
+    "files": [
+      "./dist",
+      "./electron",
+      "!**/node_modules/**"
+    ],
+    "asar": false,
+    "nsis": {
+      "oneClick": false,
+      "allowElevation": true,
+      "allowToChangeInstallationDirectory": true,
+      "installerIcon": "./build/electron-icon/icon.ico",
+      "uninstallerIcon": "./build/electron-icon/icon.ico",
+      "installerHeaderIcon": "./build/electron-icon/icon.ico",
+      "createDesktopShortcut": true,
+      "createStartMenuShortcut": true
+    }
+  },
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve | electron .",
     "build": "vue-cli-service build",
+    "build:electron": "vue-cli-service build && electron-builder",
     "lint": "vue-cli-service lint",
     "prepare": "husky install",
     "commit": "cz",
@@ -16,7 +79,6 @@
     "axios": "^1.2.0-alpha.1",
     "core-js": "^3.8.3",
     "dayjs": "^1.11.8",
-    "electron": "^25.2.0",
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.3",
     "underscore": "^1.13.6",
@@ -38,6 +100,8 @@
     "@vue/eslint-config-typescript": "^9.1.0",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
+    "electron": "^25.2.0",
+    "electron-builder": "^24.4.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "husky": "^8.0.0",
