--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-plugin-import": "^1.13.6",
     "core-js": "^3.8.3",
     "dayjs": "^1.11.8",
+    "echarts": "^5.4.2",
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.3",
     "underscore": "^1.13.6",
