--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.2.0-alpha.1",
     "core-js": "^3.8.3",
     "dayjs": "^1.11.8",
+    "echarts": "^5.4.2",
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.3",
     "postcss-px-to-viewport": "^1.1.1",
