--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "core-js": "^3.8.3",
     "dayjs": "^1.11.8",
     "echarts": "^5.4.2",
+    "element-plus": "^2.3.8",
+    "md5": "^2.3.0",
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.3",
+    "sortablejs": "^1.15.0",
     "underscore": "^1.13.6",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
@@ -25,6 +28,8 @@
   "devDependencies": {
     "@commitlint/cli": "^17.6.5",
     "@commitlint/config-conventional": "^17.6.5",
+    "@types/md5": "^2.3.2",
+    "@types/sortablejs": "^1.15.1",
     "@types/underscore": "^1.11.5",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
@@ -43,7 +48,9 @@
     "less": "^4.0.0",
     "less-loader": "^8.0.0",
     "prettier": "^2.8.8",
-    "typescript": "~4.5.5"
+    "typescript": "~4.5.5",
+    "unplugin-auto-import": "^0.16.6",
+    "unplugin-vue-components": "^0.25.1"
   },
   "config": {
     "commitizen": {
