--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.1.2",
+    "autoprefixer": "^10.4.14",
     "axios": "^1.2.0-alpha.1",
     "core-js": "^3.8.3",
     "dayjs": "^1.11.8",
@@ -20,7 +21,9 @@
     "md5": "^2.3.0",
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.3",
+    "postcss": "^8.4.26",
     "sortablejs": "^1.15.0",
+    "tailwindcss": "^3.3.3",
     "underscore": "^1.13.6",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
@@ -28,6 +31,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.6.5",
     "@commitlint/config-conventional": "^17.6.5",
+    "@iconify-json/ep": "^1.1.11",
     "@types/md5": "^2.3.2",
     "@types/sortablejs": "^1.15.1",
     "@types/underscore": "^1.11.5",
@@ -50,6 +54,7 @@
     "prettier": "^2.8.8",
     "typescript": "~4.5.5",
     "unplugin-auto-import": "^0.16.6",
+    "unplugin-icons": "^0.16.5",
     "unplugin-vue-components": "^0.25.1"
   },
   "config": {
