--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "postcss": "^8.4.26",
     "sortablejs": "^1.15.0",
     "tailwindcss": "^3.3.3",
+    "uid": "^2.0.2",
     "underscore": "^1.13.6",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
