--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prettier": "prettier --write ."
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
     "@vueuse/core": "^10.1.2",
     "autoprefixer": "^10.4.14",
     "axios": "^1.2.0-alpha.1",
