--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
     "@vueuse/core": "^10.1.2",
+    "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.14",
     "axios": "^1.2.0-alpha.1",
     "core-js": "^3.8.3",
@@ -27,7 +28,7 @@
     "tailwindcss": "^3.3.3",
     "uid": "^2.0.2",
     "underscore": "^1.13.6",
-    "vue": "^3.2.13",
+    "vue": "^3.3.4",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
