--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "tailwindcss": "^3.3.3",
     "uid": "^2.0.2",
     "underscore": "^1.13.6",
+    "unplugin-element-plus": "^0.7.2",
     "vue": "^3.3.4",
     "vue-router": "^4.0.3"
   },
